Modif sh files and add icons